--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <body>
         <main>
+            <h1>Bus Mall</h1>
             <div id="image-group">
             </div>
         </main>
