--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <main>
             <h1>Bus Mall</h1>
+            <h2>Which of these products do you prefer?</h2>
             <div id="image-group">
             </div>
         </main>
