Added bar chart for results data.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js" integrity="sha512-Wt1bJGtlnMtGP0dqNFH1xlkLBNpEodaiQ8ZN5JLA5wpc1sUlk/O5uuOMNgvzddzkpvZ9GLyYNa8w2s7rqiTk5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
 
     <body>
         <main>
             <h1>Bus Mall</h1>
             <h2>Which of these products do you prefer?</h2>
-            <div id="image-group">
-            </div>
+            <div id="image-group"></div>
         </main>
 
         <script src="script.js"></script>
